# ivms-inventory-service

./: Cargo.toml  README.md
.github/workflows/: build.yaml
docs/developer-guide/: db.md  setup.md
infrastructure/cloudformation/: config-dev.json  config-prod.json  config-staging.json  creator.yaml  db.yaml  deleter.yaml  fetcher.yaml  integration-tests.yaml  lister.yaml  root.yaml
integration-tests/: Cargo.toml
integration-tests/tests/: main.rs
integration-tests/tests/features/: create-inventory.feature  delete-inventory.feature  fetch-inventory.feature  list-inventory.feature
inventory-core/: Cargo.toml
inventory-core/src/: api_error.rs  inventory_dao.rs  lib.rs  model.rs
inventory-creator/: Cargo.toml
inventory-creator/src/: main.rs
inventory-deleter/: Cargo.toml
inventory-deleter/src/: main.rs
inventory-fetcher/: Cargo.toml
inventory-fetcher/src/: main.rs
inventory-lister/: Cargo.toml
inventory-lister/src/: main.rs
