##
# This file is part of the IVMS Online.
#
# @copyright 2023 © by Rafał Wrzeszcz - Wrzasq.pl.
##

[package]
name = "inventory-creator"
version = "0.0.4"
edition = "2021"
repository = "https://github.com/ivms-online/ivms-inventory-service"
authors = [
    "Rafał Wrzeszcz <rafal.wrzeszcz@wrzasq.pl>"
]

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock", "serde"] }
inventory-core = { path = "../inventory-core" }
lambda_runtime = "0.8.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["macros"] }
uuid = { version = "1.3.4", features = ["v4"] }
